--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body{
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    color: white;
     width: 100%;
     height: 100%;
     margin: 0;
@@ -8,6 +10,8 @@ body{
     background-image: url("night.jpg");
     background-size: cover;
     color: white;
+    -webkit-text-stroke: 1px black;
+    font-size: 32px;
 }
 
 
@@ -31,6 +35,8 @@ html{
     justify-content: space-around;
     align-items: center;
     gap: 700px;
+    margin-left: 42px;
+    margin-right: 42px;
 }
 
 #footer{
@@ -41,12 +47,15 @@ html{
 #logo{
     min-width: 100px;
     min-height: 100px;
-    font-size: 24px;
     text-align: start;
+    font-size: 34px;
+    padding-left: 24px;
+    font-weight: 600;
+
 }
 
 #spacer{
-    min-width: 100px;
+    min-width: 200px;
     min-height: 100px;
 }
 
@@ -55,6 +64,24 @@ input{
     border: none;
     font-size: 18px;
     color: white;
+    font-size: 32px;
+    font-weight: 600;
+    min-width: 400px;
+}
+
+#search{
+    min-width: 250px;
+    width: auto;
+    display: flex;
+    justify-content: center;
+    padding: 0;
+    border-bottom: 2px rgb(255, 255, 255) solid;
+    padding-bottom: 8px;
+
+}
+
+#search-button{
+    cursor: pointer;
 }
 
 input::placeholder{
@@ -66,12 +93,39 @@ input:focus{
     caret-color: white;
 }
 
-#search{
-    border-bottom: 2px rgb(255, 255, 255) solid;
-    max-width: 220px;
-    padding: 8px;
+
+#infobox-1{
+    width: 575px;
+    max-height: 500px;
 }
 
+img{
+    width: 75px;
+}
+
+#infobox-2{
+    font-size: 28px;
+    margin-right: 42px;
+}
+
+#temp{
+    font-size: 72px;
+    padding-bottom: 18px;
+    margin-bottom: 2px;
+}
+
+.border-bottom{
+    border-top: 2px solid white;
+
+}
+
+#date{
+    margin-top: 24px;
+}
+
+h1{
+    margin-bottom: 12px;
+}
 
 
 
